# pynfc

./: .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  Makefile  Pipfile  README.rst  SECURITY.md  gen.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml  publish.yml
docs/: Makefile  conf.py  index.rst  install.rst  pynfc.rst  requirements.txt
pynfc/: __init__.py  freefare.c  freefare_internal.h  nfc-internal.h  nfc.c
tests/: test_pytest.py
