[metadata]
name = pynfc
description = `ctypeslib` converted libnfc and libfreefare.
long_description = file: README.rst
keywords = Desfire Mifare NFC RFID
author = Barnaby Shearer
author_email = b@zi.is
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
project_urls =
    Source = "https://github.com/BarnabyShearer/pynfc"
    Tracker = "https://github.com/BarnabyShearer/pynfc/issues"
    Documentation = "http://pynfc.readthedocs.io/en/latest/"

[options]
packages = find:
install_requires = 
    typing; python_version < "3"
python_requires = >=2.7

[options.package_data]
* = py.typed, *.c, *.h

[bdist_wheel]
universal=1
